# overclock144_1

./: MANIFEST.in  Makefile  README.md  config.py  package-lock.json  pyproject.toml  setup.py  test.py
docs/source/: conf.py  indb.extensions.rst  indb.initialization.rst  indb.rst  indb.utils.rst  index.rst  modules.rst
indb/: api.py  app.py  base.py  constants.py  mixins.py
indb-frontend/: .eslintignore  .eslintrc.json  .prettierrc  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.mts
indb-frontend/__test__/: Login.test.tsx
indb-frontend/__test__/services/: getHealthCheck.test.ts
indb-frontend/app/: error.tsx  layout.tsx  page.tsx
indb-frontend/app/api/auth/[...nextauth]/: route.ts
indb-frontend/app/api/auth/refresh-token/: route.ts
indb-frontend/app/auth/login/: page.tsx
indb-frontend/app/chat/: page.tsx
indb-frontend/app/components/: Button.tsx  ErrorMessage.tsx
indb-frontend/app/components/Inputs/: TextInput.tsx
indb-frontend/app/services/: healthCheck.ts
indb-frontend/app/utils/: api.ts  authOptions.ts  exceptions.ts  logger.ts
indb/extensions/: __init__.py
indb/initialization/: __init__.py
indb/security/: api.py  manager.py  models.py
indb/utils/: logging_configurator.py  text2sql.py
requirements/: base.txt  development.txt  testing.txt
tests/: conftest.py  test_healthcheck.py  test_indb_security_api.py
